import * as Either from 'fp-ts/lib/Either'
import fs from 'fs-extra'
import { Collection } from 'postman-collection'
import { TestSuite, VariationWriter } from '../application'
import { getConfig } from '../lib'
import { OpenApiParser } from '../oas'
import { PostmanParser } from '../postman'
import { omitKeys, PortmanError } from '../utils'

describe('TestSuite Variations', () => {
  let postmanParser: PostmanParser
  let oasParser: OpenApiParser
  let testSuite: TestSuite

  const postmanJson = '__tests__/fixtures/crm-multi-responses.postman.json'
  const oasYml = '__tests__/fixtures/crm.yml'
  const portmanConfigFile = '__tests__/fixtures/portman-variations.crm.json'

  beforeEach(async () => {
    oasParser = new OpenApiParser()
    await oasParser.convert({ inputFile: oasYml })
    const postmanObj = JSON.parse(fs.readFileSync(postmanJson).toString())
    const configResult = await getConfig(portmanConfigFile)

    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }

    const config = configResult.right

    postmanParser = new PostmanParser({
      collection: new Collection(postmanObj),
      oasParser: oasParser
    })

    const options = { includeTests: true }

    testSuite = new TestSuite({ oasParser, postmanParser, config, options })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
  })

  it('should generateVariationTests for variations', () => {
    testSuite.generateVariationTests()
    expect(omitKeys(testSuite.collection.toJSON(), ['id', '_postman_id'])).toMatchSnapshot()
  })
})

describe('TestSuite Variations openApiResponse content-types', () => {
  let postmanParser: PostmanParser
  let oasParser: OpenApiParser
  let testSuite: TestSuite

  const postmanJson = '__tests__/fixtures/crm-multi-responses.postman.json'
  const oasYml = '__tests__/fixtures/crm-multi-responses.yml'

  beforeEach(async () => {
    oasParser = new OpenApiParser()
    await oasParser.convert({ inputFile: oasYml })

    const postmanObj = JSON.parse(fs.readFileSync(postmanJson).toString())
    postmanParser = new PostmanParser({
      collection: new Collection(postmanObj),
      oasParser: oasParser
    })
  })

  it('should use a specific content-type when multiple are available', async () => {
    const configResult = await getConfig(
      '__tests__/fixtures/portman-variations.multiple-ct-specific.json'
    )
    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }
    const config = configResult.right
    testSuite = new TestSuite({ oasParser, postmanParser, config })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
    testSuite.generateVariationTests()
    expect(omitKeys(testSuite.collection.toJSON(), ['id', '_postman_id'])).toMatchSnapshot()
  })

  it('should handle wildcard content-type and generate multiple variations', async () => {
    const configResult = await getConfig(
      '__tests__/fixtures/portman-variations.multiple-ct-wildcard.json'
    )
    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }
    const config = configResult.right
    testSuite = new TestSuite({ oasParser, postmanParser, config })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
    testSuite.generateVariationTests()
    expect(omitKeys(testSuite.collection.toJSON(), ['id', '_postman_id'])).toMatchSnapshot()
  })
})

describe('TestSuite Variations openApiRequest content-types', () => {
  let postmanParser: PostmanParser
  let oasParser: OpenApiParser
  let testSuite: TestSuite

  const postmanJson = '__tests__/fixtures/request-multi.postman.json'
  const oasYml = '__tests__/fixtures/request-multi.yml'

  beforeEach(async () => {
    oasParser = new OpenApiParser()
    await oasParser.convert({ inputFile: oasYml })

    const postmanObj = JSON.parse(fs.readFileSync(postmanJson).toString())
    postmanParser = new PostmanParser({
      collection: new Collection(postmanObj),
      oasParser: oasParser
    })
  })

  it('should use a specific request content-type when multiple are available', async () => {
    const configResult = await getConfig(
      '__tests__/fixtures/portman-variations.request-ct-specific.json'
    )
    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }
    const config = configResult.right
    testSuite = new TestSuite({ oasParser, postmanParser, config })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
    testSuite.generateVariationTests()
    expect(omitKeys(testSuite.collection.toJSON(), ['id', '_postman_id'])).toMatchSnapshot()
  })

  it('should handle wildcard request content-type and generate multiple variations', async () => {
    const configResult = await getConfig(
      '__tests__/fixtures/portman-variations.request-ct-wildcard.json'
    )
    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }
    const config = configResult.right
    testSuite = new TestSuite({ oasParser, postmanParser, config })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
    testSuite.generateVariationTests()
    expect(omitKeys(testSuite.collection.toJSON(), ['id', '_postman_id'])).toMatchSnapshot()
  })
})

describe('TestSuite Variations response codes', () => {
  let postmanParser: PostmanParser
  let oasParser: OpenApiParser
  let testSuite: TestSuite

  const postmanJson = '__tests__/fixtures/crm-multi-responses.postman.json'
  const oasYml = '__tests__/fixtures/multiple-content-types.yml'

  beforeEach(async () => {
    oasParser = new OpenApiParser()
    await oasParser.convert({ inputFile: oasYml })

    const postmanObj = JSON.parse(fs.readFileSync(postmanJson).toString())
    postmanParser = new PostmanParser({
      collection: new Collection(postmanObj),
      oasParser: oasParser
    })
  })

  it('should handle partial wildcard response codes and generate multiple variations', async () => {
    const configResult = await getConfig(
      '__tests__/fixtures/portman-variations.response-code-partial-wildcard.json'
    )
    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }
    const config = configResult.right
    testSuite = new TestSuite({ oasParser, postmanParser, config })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
    testSuite.generateVariationTests()
    expect(
      omitKeys(testSuite.collection.toJSON(), [
        'id',
        '_postman_id',
        'request',
        'response',
        'type',
        'listen'
      ])
    ).toMatchSnapshot()
  })

  it('should handle wildcard response codes and generate multiple variations', async () => {
    const configResult = await getConfig(
      '__tests__/fixtures/portman-variations.response-code-wildcard.json'
    )
    if (Either.isLeft(configResult)) {
      return PortmanError.render(configResult.left)
    }
    const config = configResult.right
    testSuite = new TestSuite({ oasParser, postmanParser, config })
    testSuite.variationWriter = new VariationWriter({
      testSuite: testSuite,
      variationFolderName: 'Variation Tests'
    })
    testSuite.generateVariationTests()
    expect(
      omitKeys(testSuite.collection.toJSON(), [
        'id',
        '_postman_id',
        'request',
        'response',
        'type',
        'listen'
      ])
    ).toMatchSnapshot()
  })
})
